# nobita

./: .gitignore  README.md  pyproject.toml
demo/: demo_simplest.py  face_age_gender.py  face_detection.py  face_emotion.py  face_landmark.py  pose_and_emotion.py  pose_estimation.py
docs/: README_EN.md  README_JA.md
nobita/: __init__.py  nobita_vision.py
nobita/modules/: __init__.py  base_module.py  downstream.py  upstream.py  utils.py
nobita/modules/models/: head-pose-estimation-adas-0001-shaves4.blob
test/: test_vision.py  test_vision_as_package.py
